[package]
name = "google-analytics-v4-report-flattener"
version = "0.1.0"
authors = ["Charlie Saunders <charlieasaunders@gmail.com>"]
description = "Converts Google Analytics API v4 reports to flat/delimited data."
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "google_analytics_v4_report_flattener"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
ga-v4-flattener = "0.1.0"
neon = "0.2.0"
serde = "1.0"
serde_json = "1.0"
